# Change Log
All notable changes to this project will be documented in this file.

## [3.2.8] - 2019-01-30
# Fixed
- Fix rendering of the Init Message for open PRs including the user doc link
- Fix the author approval counting logic for github when commenting after an
  approval

## [3.2.7] - 2018-12-17
# Added
- Add a configuration field to specify the reachable URL for BertE's UI
# Changed
- Improve BertE's init messages with a link to its UI for the users

## [3.2.6] - 2018-11-28
# Fixed
- Fixed the user documentation for the disable_version_check flag

## [3.2.5] - 2018-11-28
# Added
- Add a configuration flag to allow disabling version checks for a bert-e
  instance

## [3.2.4] - 2018-11-16
# Fixed
- Lower case bugs on admin page and with PR authors

## [3.2.3] - 2018-11-13
# Fixed
- Change the author approval option from "approved" to "approve"

## [3.2.2] - 2018-11-12
# Fixed
- Handle insensitive case for usernames

# Added
- Add support for installing a link in Bitbucket
- Add support of author approval via comments (useful for Github)

## [3.2.1] - 2018-10-15
# Fixed
- Chart deployment can now be set without tls on ingress.

## [3.2.0] - 2018-09-11
# Added
- Add docker container for Bert-E and server.
- Add Kubernetes chart.
- Add repository management page to server.
- Add documentation pages to server.
- Add OAuth based authentication to server.
- Add API system.
- Add API command line client.
- Add API documentation.
- Extend API with pull-request, branch and queue endpoints.
# Changed
- Rename BERT_E_BB_PWD into BERT_E_GITHOST_PWD.
- Move /api/rebuild_queues to /api/gwf/queues[POST].
# Fixed
- Update requirements to fix python 3.7 support.
- Fix queue system for development branches > 10.0.

## [3.1.13] - 2018-07-16
# Added
- Implement mandatory project leader approvals.
- Remove code around tester approval.
# Fixed
- Fix build status cache and build status presentation for Github projects.